remove c1 frome quadratic for make easy

--- a/Quadratic_solution.tex
+++ b/Quadratic_solution.tex
@@ -13,154 +13,154 @@
  \begin{enumerate}
 
 \item
-$ \left [ - \frac{9}{2} - \frac{\sqrt{77}}{2}, \quad - \frac{9}{2} + \frac{\sqrt{77}}{2}\right ]$
+$ \left [ - \frac{1}{2} + \frac{\sqrt{145}}{2}, \quad - \frac{\sqrt{145}}{2} - \frac{1}{2}\right ]$
 
 \item
-$ \left [ -3 - 2 \sqrt{2}, \quad -3 + 2 \sqrt{2}\right ]$
+$ \left [ - \frac{19}{2} - \frac{\sqrt{197}}{2}, \quad - \frac{19}{2} + \frac{\sqrt{197}}{2}\right ]$
 
 \item
-$ \left [ -2, \quad - \frac{3}{2}\right ]$
+$ \left [ - \frac{17}{2} - \frac{\sqrt{181}}{2}, \quad - \frac{17}{2} + \frac{\sqrt{181}}{2}\right ]$
 
 \item
-$ \left [ -2 - \sqrt{3}, \quad -2 + \sqrt{3}\right ]$
+$ \left [ -2, \quad 19\right ]$
 
 \item
-$ \left [ - \frac{9}{2} - \frac{\sqrt{65}}{2}, \quad - \frac{9}{2} + \frac{\sqrt{65}}{2}\right ]$
+$ \left [ -10 - 2 \sqrt{19}, \quad -10 + 2 \sqrt{19}\right ]$
 
 \item
-$ \left [ -3, \quad -2\right ]$
+$ \left [ - \frac{13}{2} + \frac{7 \sqrt{5}}{2}, \quad - \frac{7 \sqrt{5}}{2} - \frac{13}{2}\right ]$
 
 \item
-$ \left [ -2 - \frac{\sqrt{6}}{2}, \quad -2 + \frac{\sqrt{6}}{2}\right ]$
+$ \left [ \frac{17}{2} + \frac{\sqrt{437}}{2}, \quad - \frac{\sqrt{437}}{2} + \frac{17}{2}\right ]$
 
 \item
-$ \left [ -3 - \sqrt{2}, \quad -3 + \sqrt{2}\right ]$
+$ \left [ -17, \quad 0\right ]$
 
 \item
-$ \left [ - \frac{7}{2} - \frac{\sqrt{21}}{2}, \quad - \frac{7}{2} + \frac{\sqrt{21}}{2}\right ]$
+$ \left [ -4 + \sqrt{30}, \quad - \sqrt{30} - 4\right ]$
 
 \item
-$ \left [ -4, \quad -2\right ]$
+$ \left [ \frac{19}{2} + \frac{\sqrt{521}}{2}, \quad - \frac{\sqrt{521}}{2} + \frac{19}{2}\right ]$
 
 \item
-$ \left [ -4 - \sqrt{15}, \quad -4 + \sqrt{15}\right ]$
+$ \left [ \frac{3}{2} + \frac{\sqrt{193}}{2}, \quad - \frac{\sqrt{193}}{2} + \frac{3}{2}\right ]$
 
 \item
-$ \left [ -8, \quad -1\right ]$
+$ \left [ -1, \quad 10\right ]$
 
 \item
-$ \left [ -2 - \sqrt{3}, \quad -2 + \sqrt{3}\right ]$
+$ \left [ - \frac{3}{2} + \frac{\sqrt{149}}{2}, \quad - \frac{\sqrt{149}}{2} - \frac{3}{2}\right ]$
 
 \item
-$ \left [ -3 - \sqrt{7}, \quad -3 + \sqrt{7}\right ]$
+$ \left [ -7 - \sqrt{2}, \quad -7 + \sqrt{2}\right ]$
 
 \item
-$ \left [ - \frac{9}{2} - \frac{\sqrt{69}}{2}, \quad - \frac{9}{2} + \frac{\sqrt{69}}{2}\right ]$
+$ \left [ - \frac{19}{2} + \frac{5 \sqrt{17}}{2}, \quad - \frac{5 \sqrt{17}}{2} - \frac{19}{2}\right ]$
 
 \item
-$ \left [ -4 - \sqrt{11}, \quad -4 + \sqrt{11}\right ]$
+$ \left [ - \frac{17}{2} + \frac{\sqrt{437}}{2}, \quad - \frac{\sqrt{437}}{2} - \frac{17}{2}\right ]$
 
 \item
-$ \left [ - \frac{7}{2} - \frac{\sqrt{13}}{2}, \quad - \frac{7}{2} + \frac{\sqrt{13}}{2}\right ]$
+$ \left [ -3, \quad 14\right ]$
 
 \item
-$ \left [ - \frac{9}{2} - \frac{\sqrt{73}}{2}, \quad - \frac{9}{2} + \frac{\sqrt{73}}{2}\right ]$
+$ \left [ - \frac{7}{2} + \frac{\sqrt{129}}{2}, \quad - \frac{\sqrt{129}}{2} - \frac{7}{2}\right ]$
 
 \item
-$ \left [ -4 - \sqrt{10}, \quad -4 + \sqrt{10}\right ]$
+$ \left [ 1 + 3 \sqrt{2}, \quad - 3 \sqrt{2} + 1\right ]$
 
 \item
-$ \left [ -4 - \sqrt{7}, \quad -4 + \sqrt{7}\right ]$
+$ \left [ -10 - 5 \sqrt{2}, \quad -10 + 5 \sqrt{2}\right ]$
 
 \item
-$ \left [ -2 - \frac{\sqrt{14}}{2}, \quad -2 + \frac{\sqrt{14}}{2}\right ]$
+$ \left [ -9 - \sqrt{37}, \quad -9 + \sqrt{37}\right ]$
 
 \item
-$ \left [ - \frac{7}{2} - \frac{\sqrt{17}}{2}, \quad - \frac{7}{2} + \frac{\sqrt{17}}{2}\right ]$
+$ \left [ - \frac{11}{2} + \frac{\sqrt{309}}{2}, \quad - \frac{\sqrt{309}}{2} - \frac{11}{2}\right ]$
 
 \item
-$ \left [ -2\right ]$
+$ \left [ 2 + 2 \sqrt{7}, \quad - 2 \sqrt{7} + 2\right ]$
 
 \item
-$ \left [ - \frac{5}{2} - \frac{\sqrt{21}}{2}, \quad - \frac{5}{2} + \frac{\sqrt{21}}{2}\right ]$
+$ \left [ -3, \quad 16\right ]$
 
 \item
-$ \left [ - \frac{9}{4} - \frac{\sqrt{33}}{4}, \quad - \frac{9}{4} + \frac{\sqrt{33}}{4}\right ]$
+$ \left [ 3 + \sqrt{59}, \quad - \sqrt{59} + 3\right ]$
 
 \item
-$ \left [ - \frac{7}{2} - \frac{\sqrt{29}}{2}, \quad - \frac{7}{2} + \frac{\sqrt{29}}{2}\right ]$
+$ \left [ -9 - \sqrt{74}, \quad -9 + \sqrt{74}\right ]$
 
 \item
-$ \left [ -2, \quad -1\right ]$
+$ \left [ 2 + 3 \sqrt{5}, \quad - 3 \sqrt{5} + 2\right ]$
 
 \item
-$ \left [ - \frac{5}{2} - \frac{\sqrt{5}}{2}, \quad - \frac{5}{2} + \frac{\sqrt{5}}{2}\right ]$
+$ \left [ - \frac{3 \sqrt{21}}{2} + \frac{17}{2}, \quad \frac{3 \sqrt{21}}{2} + \frac{17}{2}\right ]$
 
 \item
-$ \left [ - \frac{7}{4} - \frac{\sqrt{33}}{4}, \quad - \frac{7}{4} + \frac{\sqrt{33}}{4}\right ]$
+$ \left [ - \frac{\sqrt{73}}{2} + \frac{13}{2}, \quad \frac{\sqrt{73}}{2} + \frac{13}{2}\right ]$
 
 \item
-$ \left [ -6, \quad -1\right ]$
+$ \left [ 4 + 5 \sqrt{2}, \quad - 5 \sqrt{2} + 4\right ]$
 
 \item
-$ \left [ - \frac{7}{2} - \frac{\sqrt{33}}{2}, \quad - \frac{7}{2} + \frac{\sqrt{33}}{2}\right ]$
+$ \left [ 1 + \sqrt{30}, \quad - \sqrt{30} + 1\right ]$
 
 \item
-$ \left [ -2 - \sqrt{2}, \quad -2 + \sqrt{2}\right ]$
+$ \left [ -10 - \sqrt{91}, \quad -10 + \sqrt{91}\right ]$
 
 \item
-$ \left [ -3\right ]$
+$ \left [ -7 - \sqrt{11}, \quad -7 + \sqrt{11}\right ]$
 
 \item
-$ \left [ - \frac{5}{2} - \frac{\sqrt{17}}{2}, \quad - \frac{5}{2} + \frac{\sqrt{17}}{2}\right ]$
+$ \left [ 2, \quad 14\right ]$
 
 \item
-$ \left [ -3, \quad - \frac{3}{2}\right ]$
+$ \left [ - \sqrt{3} + 5, \quad \sqrt{3} + 5\right ]$
 
 \item
-$ \left [ - \frac{9}{4} - \frac{\sqrt{41}}{4}, \quad - \frac{9}{4} + \frac{\sqrt{41}}{4}\right ]$
+$ \left [ - \frac{15}{2} - \frac{\sqrt{113}}{2}, \quad - \frac{15}{2} + \frac{\sqrt{113}}{2}\right ]$
 
 \item
-$ \left [ -3, \quad -1\right ]$
+$ \left [ \frac{19}{2} + \frac{3 \sqrt{57}}{2}, \quad - \frac{3 \sqrt{57}}{2} + \frac{19}{2}\right ]$
 
 \item
-$ \left [ -7, \quad -1\right ]$
+$ \left [ \frac{7}{2} + \frac{3 \sqrt{13}}{2}, \quad - \frac{3 \sqrt{13}}{2} + \frac{7}{2}\right ]$
 
 \item
-$ \left [ -3, \quad -1\right ]$
+$ \left [ 8 + \sqrt{87}, \quad - \sqrt{87} + 8\right ]$
 
 \item
-$ \left [ -1, \quad - \frac{1}{2}\right ]$
+$ \left [ \frac{19}{2} + \frac{\sqrt{557}}{2}, \quad - \frac{\sqrt{557}}{2} + \frac{19}{2}\right ]$
 
 \item
-$ \left [ - \frac{7}{2} - \frac{\sqrt{37}}{2}, \quad - \frac{7}{2} + \frac{\sqrt{37}}{2}\right ]$
+$ \left [ \frac{17}{2} + \frac{\sqrt{313}}{2}, \quad - \frac{\sqrt{313}}{2} + \frac{17}{2}\right ]$
 
 \item
-$ \left [ - \frac{7}{2} - \frac{3 \sqrt{5}}{2}, \quad - \frac{7}{2} + \frac{3 \sqrt{5}}{2}\right ]$
+$ \left [ 7 + \sqrt{97}, \quad - \sqrt{97} + 7\right ]$
 
 \item
-$ \left [ - \frac{9}{4} - \frac{\sqrt{57}}{4}, \quad - \frac{9}{4} + \frac{\sqrt{57}}{4}\right ]$
+$ \left [ \frac{5}{2} + \frac{\sqrt{97}}{2}, \quad - \frac{\sqrt{97}}{2} + \frac{5}{2}\right ]$
 
 \item
-$ \left [ - \frac{9}{4} - \frac{\sqrt{73}}{4}, \quad - \frac{9}{4} + \frac{\sqrt{73}}{4}\right ]$
+$ \left [ 4 + 2 \sqrt{7}, \quad - 2 \sqrt{7} + 4\right ]$
 
 \item
-$ \left [ - \frac{7}{4} - \frac{\sqrt{41}}{4}, \quad - \frac{7}{4} + \frac{\sqrt{41}}{4}\right ]$
+$ \left [ - \sqrt{11}, \quad \sqrt{11}\right ]$
 
 \item
-$ \left [ -3, \quad - \frac{1}{2}\right ]$
+$ \left [ - \frac{3}{2} + \frac{\sqrt{93}}{2}, \quad - \frac{\sqrt{93}}{2} - \frac{3}{2}\right ]$
 
 \item
-$ \left [ - \frac{9}{4} - \frac{\sqrt{65}}{4}, \quad - \frac{9}{4} + \frac{\sqrt{65}}{4}\right ]$
+$ \left [ - \frac{1}{2} + \frac{\sqrt{129}}{2}, \quad - \frac{\sqrt{129}}{2} - \frac{1}{2}\right ]$
 
 \item
-$ \left [ - \frac{9}{2} - \frac{\sqrt{61}}{2}, \quad - \frac{9}{2} + \frac{\sqrt{61}}{2}\right ]$
+$ \left [ - \frac{13}{2} + \frac{\sqrt{197}}{2}, \quad - \frac{\sqrt{197}}{2} - \frac{13}{2}\right ]$
 
 \item
-$ \left [ -1 - \frac{\sqrt{2}}{2}, \quad -1 + \frac{\sqrt{2}}{2}\right ]$
+$ \left [ - \frac{\sqrt{177}}{2} + \frac{15}{2}, \quad \frac{\sqrt{177}}{2} + \frac{15}{2}\right ]$
 
 \item
-$ \left [ -1\right ]$
+$ \left [ -6, \quad -5\right ]$
 
 
 \end{enumerate}
